Wording, improvements to visibility of tabs etc.
